--- a/App/ClientApp/src/app/layout/asset-libraries/view-asset-library/view-asset-library.component.html
+++ b/App/ClientApp/src/app/layout/asset-libraries/view-asset-library/view-asset-library.component.html
@@ -102,7 +102,8 @@
             Last Updated Date
           </th>
           <td mat-cell *matCellDef="let element">
-            {{element.LastUpdatedDate | date:"dd/MM/yyyy h:mm a"}}
+            <!--{{element.LastUpdatedDate | date:"dd/MM/yyyy h:mm a"}}-->
+            <span>{{element.LastUpdatedDate | date:DataFormat}} </span>{{element.LastUpdatedDate | date:"h:mm a"}}
           </td>
         </ng-container>
 
