--- a/App/ClientApp/src/app/layout/logs-details/logs-details.component.html
+++ b/App/ClientApp/src/app/layout/logs-details/logs-details.component.html
@@ -61,7 +61,9 @@
 
           <ng-container matColumnDef="date">
             <th class="width20" mat-header-cell *matHeaderCellDef mat-sort-header> Last Execution Date </th>
-            <td mat-cell *matCellDef="let element">{{element.CreateDate  | date : "dd/MM/yyyy  h:mm a" }} </td>
+            <!--<td mat-cell *matCellDef="let element">{{element.CreateDate  | date : "dd/MM/yyyy  h:mm a" }} </td>-->
+            <td mat-cell *matCellDef="let element"> <span>{{element.CreateDate  | date:DataFormat}}</span> {{element.CreateDate  | date:"h:mm a"}}</td>
+
           </ng-container>
 
           <ng-container matColumnDef="actions">
