--- a/App/ClientApp/src/app/layout/schedule-management/list/list.component.html
+++ b/App/ClientApp/src/app/layout/schedule-management/list/list.component.html
@@ -40,14 +40,14 @@
           <!-- Weight Column -->
           <ng-container matColumnDef="startDate">
             <th class="width13 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Start Date </th>
-            <td mat-cell *matCellDef="let element"> {{element.StartDate  | date:"dd/MM/yyyy"}}</td>
+            <td mat-cell *matCellDef="let element"> {{element.StartDate  | date:DataFormat}}</td>
           </ng-container>
 
           <!-- Symbol Column -->
           <ng-container matColumnDef="endDate">
             <th class="width13 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> End Date </th>
             <td mat-cell *matCellDef="let element">
-              <span *ngIf='element.EndDate!="0001-01-01T00:00:00"'> {{element.EndDate  | date:"dd/MM/yyyy"}}</span>
+              <span *ngIf='element.EndDate!="0001-01-01T00:00:00"'> {{element.EndDate  | date:DataFormat}}</span>
               <span *ngIf='element.EndDate=="0001-01-01T00:00:00"'> - </span>
             </td>
           </ng-container>
