--- a/App/ClientApp/src/app/layout/statement-search/statement-search.component.html
+++ b/App/ClientApp/src/app/layout/statement-search/statement-search.component.html
@@ -35,7 +35,7 @@
 
           <ng-container matColumnDef="date">
             <th class="width15" mat-header-cell *matHeaderCellDef mat-sort-header> Statement Date </th>
-            <td mat-cell *matCellDef="let element"> {{element.StatementDate  | date:"dd/MM/yyyy"}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.StatementDate  | date:DataFormat}} </td>
           </ng-container>
 
           <ng-container matColumnDef="period">
