--- a/App/ClientApp/src/app/layout/dashboard/dashboard.component.html
+++ b/App/ClientApp/src/app/layout/dashboard/dashboard.component.html
@@ -16,7 +16,7 @@
       <div class="icon-line-dashboard2 dash-icon-bg-2 dash-icon"></div>
       <div class="dash-in">
         <h5 class="mb-0">{{DashboardData.GeneratedStatementsOfLastscheduleRun}}</h5>
-        <div class="font20">Generated Statements from Last schedule Run</div>
+        <div class="font20">Generated Statements from Last Schedule Run</div>
       </div>
     </div>
     <div class="card card-bg-3 card-tile">
