--- a/App/ClientApp/src/app/layout/tenants/add/add.component.html
+++ b/App/ClientApp/src/app/layout/tenants/add/add.component.html
@@ -111,10 +111,10 @@
               <div class="col-xl-5 col-lg-6 col-md-6 col-sm-6 form-group">
                 <label>Country</label><span class="text-danger ml-2">*</span>
                 <select formControlName="tenantCountry" (change)='onTenantCountrySelected($event)' class="form-control">
-                  <option *ngFor="let role of countrycodeLists" [value]="role.Identifier">{{role.CountryName}}</option>
+                  <option *ngFor="let c of countrycodeLists" [value]="c.Identifier">{{c.CountryName}}</option>
                 </select>
                 <div class="validation-msg" style="color:red">
-                  <ul *ngIf="contactFormErrorObject.showCountryCodeError" style="list-style-type:none">
+                  <ul *ngIf="tenantFormErrorObject.showCountryCodeError" style="list-style-type:none">
                     <li class="text-danger">
                       Please select country
                     </li>
@@ -246,9 +246,9 @@
       <div class="filter-body stylescrollbar">
         <div class="row">
           <div class="col-sm-12 form-group">
-            <label> Contact Type </label>
+            <label> Contact Type </label><span class="text-danger ml-2">*</span>
             <select formControlName="ContactType" (change)='onContactTypeSelect($event)' class="form-control">
-              <option *ngFor="let role of contactTypeList" [value]="role.Identifier">{{role.Name}}</option>
+              <option *ngFor="let ct of contactTypeList" [value]="ct.Identifier">{{ct.Name}}</option>
             </select>
             <div class="validation-msg" style="color:red">
               <ul *ngIf="contactFormErrorObject.showContactTypeError" style="list-style-type:none">
@@ -261,7 +261,7 @@
         </div>
         <div class="row">
           <div class="col-sm-12 form-group">
-            <label> First Name </label>
+            <label> First Name </label><span class="text-danger ml-2">*</span>
             <input type="text" class="form-control" id="inputFirstName" formControlName="firstName">
             <div class="validation-msg" style="color:red" *ngIf="firstName.touched && firstName.errors">
               <ul style="list-style-type:none">
@@ -283,7 +283,7 @@
         </div>
         <div class="row">
           <div class="col-sm-12 form-group">
-            <label> Last Name </label>
+            <label> Last Name </label><span class="text-danger ml-2">*</span>
             <input type="text" class="form-control" id="inputLastName" formControlName="lastName">
             <div class="validation-msg" style="color:red" *ngIf="lastName.touched && lastName.errors">
               <ul style="list-style-type:none">
@@ -291,7 +291,7 @@
                   Invalid last name
                 </li>
                 <li class="text-danger" *ngIf="lastName.errors?.required">
-                  last name required
+                  Last name required
                 </li>
                 <li class="text-danger" *ngIf="lastName.errors?.minlength">
                   Last name length should not be less than 2
@@ -305,7 +305,7 @@
         </div>
         <div class="row">
           <div class="col-sm-12 form-group">
-            <label> Email </label>
+            <label> Email </label><span class="text-danger ml-2">*</span>
             <input type="email" class="form-control" id="inputEmail" formControlName="email">
             <div class="validation-msg" style="color:red" *ngIf="email.touched && email.errors">
               <ul style="list-style-type:none">
@@ -325,7 +325,7 @@
               <div class="col-5 col-md-5 col-sm-6 col-xs-5 p-rtl">
                 <label for="inputCountryCode">Country Code</label><span class="text-danger ml-2">*</span>
                 <select formControlName="CountryCode" (change)='onCountrySelected($event)' class="form-control">
-                  <option *ngFor="let role of countrycodeLists" [value]="role.Identifier">{{role.Code}}</option>
+                  <option *ngFor="let c of countrycodeLists" [value]="c.Identifier">{{c.Code}}</option>
                 </select>
                 <div class="validation-msg" style="color:red">
                   <ul *ngIf="contactFormErrorObject.showCountryCodeError" style="list-style-type:none">
@@ -377,9 +377,6 @@
         </ul>
       </div>
     </div>
-
-
-
   </form>
 
   <form [formGroup]="contactEditFormGroup" name="contactEditFormGroup" autocomplete="on" novalidate>
@@ -390,9 +387,9 @@
       <div class="filter-body stylescrollbar">
         <div class="row">
           <div class="col-sm-12 form-group">
-            <label> Contact Type </label>
+            <label> Contact Type </label><span class="text-danger ml-2">*</span>
             <select formControlName="EditcontactType" (change)='onContactTypeSelect($event)' class="form-control">
-              <option *ngFor="let role of contactTypeList" [value]="role.Identifier">{{role.Name}}</option>
+              <option *ngFor="let ct of contactTypeList" [value]="ct.Identifier">{{ct.Name}}</option>
             </select>
             <div class="validation-msg" style="color:red">
               <ul *ngIf="contactFormErrorObject.showContactTypeError" style="list-style-type:none">
@@ -405,7 +402,7 @@
         </div>
         <div class="row">
           <div class="col-sm-12 form-group">
-            <label> First Name </label>
+            <label> First Name </label><span class="text-danger ml-2">*</span>
             <input type="text" class="form-control" id="inputFirstNameEdit" formControlName="EditfirstName">
             <div class="validation-msg" style="color:red" *ngIf="EditfirstName.touched && EditfirstName.errors">
               <ul style="list-style-type:none">
@@ -427,7 +424,7 @@
         </div>
         <div class="row">
           <div class="col-sm-12 form-group">
-            <label> Last Name </label>
+            <label> Last Name </label><span class="text-danger ml-2">*</span>
             <input type="text" class="form-control" id="inputLastNameEdit" formControlName="EditlastName">
             <div class="validation-msg" style="color:red" *ngIf="EditlastName.touched && EditlastName.errors">
               <ul style="list-style-type:none">
@@ -435,7 +432,7 @@
                   Invalid last name
                 </li>
                 <li class="text-danger" *ngIf="EditlastName.errors?.required">
-                  last name required
+                  Last name required
                 </li>
                 <li class="text-danger" *ngIf="EditlastName.errors?.minlength">
                   Last name length should not be less than 2
@@ -449,7 +446,7 @@
         </div>
         <div class="row">
           <div class="col-sm-12 form-group">
-            <label> Email </label>
+            <label> Email </label><span class="text-danger ml-2">*</span>
             <input type="email" class="form-control" id="inputEmailEdit" formControlName="Editemail">
             <div class="validation-msg" style="color:red" *ngIf="email.touched && email.errors">
               <ul style="list-style-type:none">
@@ -469,7 +466,7 @@
               <div class="col-5 col-md-5 col-sm-6 col-xs-5 p-rtl">
                 <label for="inputCountryCode">Country Code</label><span class="text-danger ml-2">*</span>
                 <select formControlName="EditCountryCode" (change)='onCountrySelected($event)' class="form-control">
-                  <option *ngFor="let role of countrycodeLists" [value]="role.Identifier">{{role.Code}}</option>
+                  <option *ngFor="let c of countrycodeLists" [value]="c.Identifier">{{c.Code}}</option>
                 </select>
                 <div class="validation-msg" style="color:red">
                   <ul *ngIf="contactFormErrorObject.showCountryCodeError" style="list-style-type:none">
