sidebar menu selection on page refresh issue

--- a/App/ClientApp/src/app/layout/tenants/add/add.component.html
+++ b/App/ClientApp/src/app/layout/tenants/add/add.component.html
@@ -103,7 +103,7 @@
                 <textarea class="form-control" rows="4" formControlName="tenantDescription"></textarea>
               </div>
               <div class="col-xl-5 col-lg-6 col-md-6 col-sm-6 form-group">
-                <label>Address</label>
+                <label>Address</label><span class="text-danger ml-2">*</span>
                 <textarea class="form-control" rows="4" formControlName="tenantAddress"></textarea>
               </div>
             </div>
