--- a/App/ClientApp/src/app/layout/dashboard/dashboard.component.html
+++ b/App/ClientApp/src/app/layout/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
     <div class="card card-bg-1 card-tile">
       <div class="icon-production-plan-line2 dash-icon-bg-1 dash-icon"></div>
       <div class="dash-in">
-        <h5 class="mb-0">{{DashboardData.LastSCheduleRunDate}}</h5>
+        <h5 class="mb-0">{{DashboardData.LastSCheduleRunDate| date:DataFormat}}</h5>
         <div class="font20">Last Schedule Run</div>
       </div>
     </div>
