--- a/App/ClientApp/src/app/layout/tenant-configuration/tenant-configuration.component.html
+++ b/App/ClientApp/src/app/layout/tenant-configuration/tenant-configuration.component.html
@@ -78,7 +78,7 @@
             <!--<input type="text" class="form-control" id="TenantConfigurationDateFormat" name="TenantConfigurationDateFormat"
                    formControlName="TenantConfigurationDateFormat" />-->
             <select class="form-control" formControlName="TenantConfigurationDateFormat" id="TenantConfigurationDateFormat">
-              <option value="0"selected> Select Status</option>
+              <option value="0"selected> Select</option>
               <option value="dd/MM/yyyy">DD/MM/YYYY</option>
               <option value="MM/dd/yyyy">MM/DD/YYYY</option>
               <option value="yyyy/MM/dd">YYYY/MM/DD</option>
