--- a/App/ClientApp/src/app/shared/modules/sidebar/sidebar.component.html
+++ b/App/ClientApp/src/app/shared/modules/sidebar/sidebar.component.html
@@ -114,6 +114,10 @@
         <a> <span class='nav-icon icon-users-line2' title="Tenant Groups"> </span> <span class='nav-title'>Tenant Groups</span> </a>
       </li>
 
+      <li [ngClass]="(URL=='/multiTenantUserAccess')?'side-bar-li active-li':'side-bar-li'" *ngIf="!IsMainMenu && isSuperAdminUser" (click)="navigateToMultiTenantUserAccess()">
+        <a> <span class='nav-icon icon-roles-line2' title="Multi-Tenant User Access Mapping"> </span> <span class='nav-title'>Tenant User Access</span> </a>
+      </li>
+
       <li [ngClass]="(URL=='/contacttype')?'side-bar-li active-li':'side-bar-li'" *ngIf="!IsMainMenu && isSuperAdminUser" (click)="navigateToContactType()">
         <a> <span class='nav-icon fa fa-address-card' title="Contact Type"> </span> <span class='nav-title'>Contact Type</span> </a>
       </li>
