--- a/App/ClientApp/src/app/layout/multi-tenant-user-access-map/multi-tenant-user-access-map.component.html
+++ b/App/ClientApp/src/app/layout/multi-tenant-user-access-map/multi-tenant-user-access-map.component.html
@@ -10,8 +10,8 @@
             <div class="row form-group">
                 <div class="col-md-4 col-lg-4">
                     <label id="lblSelectTenant" for="inpuPrimaryTenantId">Select Tenant</label> <span class="text-danger"> *</span>
-                    <select id="inpuPrimaryTenantId" formControlName="primaryTenantId" class="form-control">
-                      <option *ngFor="let pt of lstPrimaryTenant" [value]="pt.Identifier">{{pt.TenantName}}</option>
+                    <select id="inpuPrimaryTenantId" formControlName="primaryTenantCode" class="form-control" (change)="onPrimaryTenantSelected($event)">
+                      <option *ngFor="let pt of lstPrimaryTenant" [value]="pt.TenantCode">{{pt.TenantName}}</option>
                     </select>
                     <div class="validation-msg" style="color:red">
                       <ul style="list-style-type:none" *ngIf="tenantUserMappingFormErrorObject.showPrimaryTenantError">
@@ -21,8 +21,8 @@
                 </div>
                 <div class="col-md-4 col-lg-4">
                     <label id="lblTenantUser" for="inputTenantUserId">Select User</label> <span class="text-danger"> *</span>
-                    <select id="inputTenantUserId" formControlName="tenantUserId" class="form-control">
-                    <option *ngFor="let tu of tenantusers" [value]="tu.Identifier">{{tu.UserName}}</option>
+                    <select id="inputTenantUserId" formControlName="tenantUserId" class="form-control" (change)="onTenantUserSelected($event)">
+                    <option *ngFor="let tu of tenantusers" [value]="tu.Identifier">{{tu.FirstName}} {{tu.LastName}}</option>
                     </select>
                     <div class="validation-msg" style="color:red">
                     <ul style="list-style-type:none" *ngIf="tenantUserMappingFormErrorObject.showTenantUserError">
@@ -35,8 +35,8 @@
             <div class="row form-group mt-2">
               <div class="col-md-4 col-lg-4">
                 <label id="lblOtherTenants" for="inputOtherTenantId">Select Tenant</label> <span class="text-danger"> *</span>
-                <select id="inputOtherTenantId" formControlName="otherTenantId" class="form-control" >
-                  <option *ngFor="let ot of lstOtherTenants" [value]="ot.Identifier">{{ot.TenantName}}</option>
+                <select id="inputOtherTenantId" formControlName="otherTenantCode" class="form-control" (change)="onOtherTenantSelected($event)">
+                  <option *ngFor="let ot of lstOtherTenants" [value]="ot.TenantCode">{{ot.TenantName}}</option>
                 </select>
                 <div class="validation-msg" style="color:red">
                     <ul style="list-style-type:none" *ngIf="tenantUserMappingFormErrorObject.showOtherTenantError">
@@ -46,7 +46,7 @@
               </div>
               <div class="col-md-4 col-lg-4">
                 <label id="lblRole" for="inputRoleId">Select Role</label> <span class="text-danger"> *</span>
-                <select id="inputRoleId" formControlName="roleId" class="form-control">
+                <select id="inputRoleId" formControlName="roleId" class="form-control" (change)="onUserRoleSelected($event)">
                   <option *ngFor="let r of roles" [value]="r.Identifier">{{r.Name}}</option>
                 </select>
                 <div class="validation-msg" style="color:red">
@@ -81,23 +81,29 @@
           <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)">
             <!-- Position Column -->
             <ng-container matColumnDef="username">
-              <th class="width30 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> User Name </th>
+              <th class="width25 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> User Name </th>
               <td mat-cell *matCellDef="let element">{{element.UserName}}</td>
             </ng-container>
             <ng-container matColumnDef="tenantname">
-              <th class="width35 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Tenant </th>
-              <td mat-cell *matCellDef="let element">{{element.TenantName}}</td>
+              <th class="width30 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Tenant </th>
+              <td mat-cell *matCellDef="let element">{{element.OtherTenantName}}</td>
             </ng-container>
-    
             <ng-container matColumnDef="role">
-              <th class="width20 ip-w-5" mat-header-cell *matHeaderCellDef mat-sort-header> Role </th>
-              <td mat-cell *matCellDef="let element">{{element.Role}} </td>
+              <th class="width15 ip-w-5" mat-header-cell *matHeaderCellDef mat-sort-header> Role </th>
+              <td mat-cell *matCellDef="let element">{{element.RoleName}} </td>
+            </ng-container>
+            <ng-container matColumnDef="status">
+              <th class="width15 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+              <td mat-cell *matCellDef="let element">
+                <span class="badge badge-success p-1" *ngIf="element.IsActive">Active</span>
+                <span class="badge badge-warning p-1 text-white" *ngIf="!element.IsActive">Inactive</span>
+              </td>
             </ng-container>
             <ng-container matColumnDef="actions">
               <th class="width15 ip-w-25" mat-header-cell *matHeaderCellDef> Actions </th>
               <td mat-cell *matCellDef="let element">
                 <div class="action-btns btn-tbl-action">
-                  <button type="button" title="Update" id="btnUpdate" (click)="updateTenantUserMapping(element)">
+                  <button type="button" title="Update" id="btnUpdate" (click)="updateTenantUserMapping(element)" [disabled]="!element.IsActive">
                     <span class="fa fa-pencil-square-o"></span>
                   </button>
                   <button type="button" (click)="deactiveTenantUserMapping(element)" title="Deactivate" *ngIf="element.IsActive"><span class="fa fa-toggle-on text-success"></span></button>
@@ -105,7 +111,6 @@
                 </div>
               </td>
             </ng-container>
-    
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
           </table>
