--- a/App/ClientApp/src/app/layout/multi-tenant-user-access-map/multi-tenant-user-access-map.component.html
+++ b/App/ClientApp/src/app/layout/multi-tenant-user-access-map/multi-tenant-user-access-map.component.html
@@ -1,72 +1,16 @@
-<div class="main-container">
-    <div class="page-title">
-      <span class="xs-title"> Multi-Tenant User Access Mapping  </span>
+<div class="main-container position-relative">
+    <div class="page-title d-flex justify-content-md-between justify-content-end">
+      <div class="xs-title">
+        <span class="mr-2">Tenant User Role Access Mapping</span>
+        <span class="icon-filter filter-btn" id="spnFilter" (click)="isFilter=!isFilter"></span>
+      </div>
+      <div>
+        <button class="btn-add btn-cust" id="btnAddTenantUserRoleAccessMapping" (click)="navigateToAddTenantUserRoleAccessMapping()">
+          <span class="fa fa-plus btn-icon-cust btn-icon-fill"></span> Add
+        </button>
+  
+      </div>
     </div>
-
-    <form [formGroup]="multiTenantUserAccessMapFormGroup" name="multiTenantUserAccessMapForm">
-        
-        <div class="card border-0 mb-2 card-shadow">
-          <div class="card-body">
-            <div class="row form-group">
-                <div class="col-md-4 col-lg-4">
-                    <label id="lblSelectTenant" for="inpuPrimaryTenantId">Select Tenant</label> <span class="text-danger"> *</span>
-                    <select id="inpuPrimaryTenantId" formControlName="primaryTenantCode" class="form-control" (change)="onPrimaryTenantSelected($event)">
-                      <option *ngFor="let pt of lstPrimaryTenant" [value]="pt.TenantCode">{{pt.TenantName}}</option>
-                    </select>
-                    <div class="validation-msg" style="color:red">
-                      <ul style="list-style-type:none" *ngIf="tenantUserMappingFormErrorObject.showPrimaryTenantError">
-                        <li class="text-danger">Please select Tenant</li>
-                      </ul>
-                    </div>
-                </div>
-                <div class="col-md-4 col-lg-4">
-                    <label id="lblTenantUser" for="inputTenantUserId">Select User</label> <span class="text-danger"> *</span>
-                    <select id="inputTenantUserId" formControlName="tenantUserId" class="form-control" (change)="onTenantUserSelected($event)">
-                    <option *ngFor="let tu of tenantusers" [value]="tu.Identifier">{{tu.FirstName}} {{tu.LastName}}</option>
-                    </select>
-                    <div class="validation-msg" style="color:red">
-                    <ul style="list-style-type:none" *ngIf="tenantUserMappingFormErrorObject.showTenantUserError">
-                        <li class="text-danger">Please select User</li>
-                    </ul>
-                    </div>
-                </div>
-            </div>
-    
-            <div class="row form-group mt-2">
-              <div class="col-md-4 col-lg-4">
-                <label id="lblOtherTenants" for="inputOtherTenantId">Select Tenant</label> <span class="text-danger"> *</span>
-                <select id="inputOtherTenantId" formControlName="otherTenantCode" class="form-control" (change)="onOtherTenantSelected($event)">
-                  <option *ngFor="let ot of lstOtherTenants" [value]="ot.TenantCode">{{ot.TenantName}}</option>
-                </select>
-                <div class="validation-msg" style="color:red">
-                    <ul style="list-style-type:none" *ngIf="tenantUserMappingFormErrorObject.showOtherTenantError">
-                        <li class="text-danger">Please select Tenant</li>
-                    </ul>
-                </div>
-              </div>
-              <div class="col-md-4 col-lg-4">
-                <label id="lblRole" for="inputRoleId">Select Role</label> <span class="text-danger"> *</span>
-                <select id="inputRoleId" formControlName="roleId" class="form-control" (change)="onUserRoleSelected($event)">
-                  <option *ngFor="let r of roles" [value]="r.Identifier">{{r.Name}}</option>
-                </select>
-                <div class="validation-msg" style="color:red">
-                    <ul style="list-style-type:none" *ngIf="tenantUserMappingFormErrorObject.showUserRoleError">
-                        <li class="text-danger">Please select Role</li>
-                    </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-    
-        <div class="card border-0 mt-4 mb-3 bg-transparent">
-          <div class="card-body p-0">
-            <button class="btn-footer-fill mr-2" id="btnSave" [disabled]="saveBtnValidation()" (click)="OnSaveBtnClicked()">Save</button>
-            <button class="btn-footer-outline" id="btnCancel" (click)="ResetForm()">Cancel</button>
-          </div>
-        </div>
-    
-    </form>
 
     <div class="card border-0 mb-3 card-shadow">
         <div class="card-body">
@@ -80,12 +24,16 @@
           <div class="widget-area-grid padding-0">
           <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)">
             <!-- Position Column -->
+            <ng-container matColumnDef="parentname">
+              <th class="width20 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Parent Tenant </th>
+              <td mat-cell *matCellDef="let element">{{element.AssociatedTenantName}}</td>
+            </ng-container>
             <ng-container matColumnDef="username">
-              <th class="width25 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> User Name </th>
+              <th class="width20 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> User Name </th>
               <td mat-cell *matCellDef="let element">{{element.UserName}}</td>
             </ng-container>
             <ng-container matColumnDef="tenantname">
-              <th class="width30 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Tenant </th>
+              <th class="width20 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Target Tenant </th>
               <td mat-cell *matCellDef="let element">{{element.OtherTenantName}}</td>
             </ng-container>
             <ng-container matColumnDef="role">
@@ -93,7 +41,7 @@
               <td mat-cell *matCellDef="let element">{{element.RoleName}} </td>
             </ng-container>
             <ng-container matColumnDef="status">
-              <th class="width15 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+              <th class="width10 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
               <td mat-cell *matCellDef="let element">
                 <span class="badge badge-success p-1" *ngIf="element.IsActive">Active</span>
                 <span class="badge badge-warning p-1 text-white" *ngIf="!element.IsActive">Inactive</span>
@@ -116,6 +64,132 @@
           </table>
             </div>
         </div>
+    </div>
+
+    <form [formGroup]="TenantUserRoleMappingFilterForm">
+      <div class="filter-popup" [ngClass]="!isFilter? 'filter-popup':'filter-popup-show'">
+        <div class="filter-head">
+          <label class="m-0">Apply Filter</label>
+        </div>
+        <div class="filter-body-left d-flex flex-column stylescrollbar">
+          <div class="form-group">
+            <label>Parent Tenant Name</label>
+            <input type="text" class="form-control" id="filterInputParentTenantName" formControlName="filterParentTenantName">
+          </div>
+          <div class="form-group">
+            <label>User Name</label>
+            <input type="text" class="form-control" id="filterInputUserName" formControlName="filterUserName">
+          </div>
+          <div class="form-group">
+            <label>Target Tenant Name</label>
+            <input type="text" class="form-control" id="filterInputTargetTenantName" formControlName="filterTargetTenantName">
+          </div>
+          <div class="form-group">
+            <label>Role</label>
+            <input type="text" class="form-control" id="filterInputRole" formControlName="filterRole">
+          </div>
+        </div>
+        <!--[ngClass]="filterClass"-->
+        <div class="filter-footer">
+          <ul class="nav">
+            <li class="nav-item width33" title="Search">
+              <button class="btn-footer-fill btn-block rounded-0 height100" (click)="searchFilter('search')">
+                <span class="fa fa-check"></span>
+              </button>
+            </li>
+            <li class="nav-item width33" title="Reset" (click)="searchFilter('reset')">
+              <a class="nav-link p-0">
+                <span class="fa fa-refresh"></span>
+              </a>
+            </li>
+            <li class="nav-item width33" title="Close" (click)="closeFilter()">
+              <a class="nav-link p-0">
+                <span class="fa fa-close"></span>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
+    </form>
+
+    <form [formGroup]="multiTenantUserAccessMapFormGroup" name="multiTenantUserAccessMapForm">
+      
+      <div class="form-popup side-popup width340" [ngClass]="popupContainer? 'show' : 'hide'">
+        <div class="filter-head">
+          <label class="m-0" *ngIf='!updateOperationMode'>Add Tenant User Role Access Mapping</label>
+          <label class="m-0" *ngIf='updateOperationMode'>Update Tenant User Role Access Mapping</label>
+        </div>
+  
+        <div class="filter-body stylescrollbar">
+          <div class="row">
+            <div class="form-group col-sm-12 parent-rtl">
+              <label id="lblSelectTenant" for="inpuPrimaryTenantId">Select Tenant</label> <span class="text-danger"> *</span>
+              <select id="inpuPrimaryTenantId" formControlName="primaryTenantCode" class="form-control" (change)="onPrimaryTenantSelected($event)">
+                <option *ngFor="let pt of lstPrimaryTenant" [value]="pt.TenantCode">{{pt.TenantName}}</option>
+              </select>
+              <div class="validation-msg" style="color:red">
+                <ul style="list-style-type:none" *ngIf="tenantUserMappingFormErrorObject.showPrimaryTenantError">
+                  <li class="text-danger">Please select Tenant</li>
+                </ul>
+              </div>
+            </div>
+            <div class="form-group col-sm-12 parent-rtl">
+              <label id="lblTenantUser" for="inputTenantUserId">Select User</label> <span class="text-danger"> *</span>
+                  <select id="inputTenantUserId" formControlName="tenantUserId" class="form-control" (change)="onTenantUserSelected($event)">
+                  <option *ngFor="let tu of tenantusers" [value]="tu.Identifier">{{tu.FirstName}} {{tu.LastName}}</option>
+                  </select>
+                  <div class="validation-msg" style="color:red">
+                  <ul style="list-style-type:none" *ngIf="tenantUserMappingFormErrorObject.showTenantUserError">
+                      <li class="text-danger">Please select User</li>
+                  </ul>
+                  </div>
+            </div>
+            <div class="form-group col-sm-12 parent-rtl">
+              <label id="lblOtherTenants" for="inputOtherTenantId">Select Target Tenant</label> <span class="text-danger"> *</span>
+              <select id="inputOtherTenantId" formControlName="otherTenantCode" class="form-control" (change)="onOtherTenantSelected($event)">
+                <option *ngFor="let ot of lstOtherTenants" [value]="ot.TenantCode">{{ot.TenantName}}</option>
+              </select>
+              <div class="validation-msg" style="color:red">
+                  <ul style="list-style-type:none" *ngIf="tenantUserMappingFormErrorObject.showOtherTenantError">
+                      <li class="text-danger">Please select Tenant</li>
+                  </ul>
+              </div>
+            </div>
+            <div class="form-group col-sm-12 parent-rtl">
+              <label id="lblRole" for="inputRoleId">Select Role</label> <span class="text-danger"> *</span>
+              <select id="inputRoleId" formControlName="roleId" class="form-control" (change)="onUserRoleSelected($event)">
+                <option *ngFor="let r of roles" [value]="r.Identifier">{{r.Name}}</option>
+              </select>
+              <div class="validation-msg" style="color:red">
+                  <ul style="list-style-type:none" *ngIf="tenantUserMappingFormErrorObject.showUserRoleError">
+                      <li class="text-danger">Please select Role</li>
+                  </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+  
+        <div class="filter-footer">
+          <ul class="nav nav-toolbar">
+            <li class="nav-item width50">
+              <button title="Save" id="btnSave" [disabled]="saveBtnValidation()" (click)="OnSaveBtnClicked()"
+                      class="btn-footer-fill btn-block rounded-0 height100">
+                <span class="fa fa-check"></span>
+              </button>
+            </li>
+            <li class="nav-item width50">
+              <button title="Close" id="btnCancel" (click)="ResetForm()"
+                      class="btn-footer-fill btn-block rounded-0 height100">
+                <span class="fa fa-close"></span>
+              </button>
+            </li>
+          </ul>
+        </div>
+      </div>
+  
+    </form>
+
  </div>   
+
+ <div class="overlay a" id="divOverlay" [ngClass]="!popupContainer? 'hide':'show'"></div>
   
