--- a/App/ClientApp/src/app/layout/tenants/add/add.component.html
+++ b/App/ClientApp/src/app/layout/tenants/add/add.component.html
@@ -447,7 +447,7 @@
         <div class="row">
           <div class="col-sm-12 form-group">
             <label> Email </label><span class="text-danger ml-2">*</span>
-            <input type="email" class="form-control" id="inputEmailEdit" formControlName="Editemail">
+            <input type="email" class="form-control" [readonly]="updateOperationMode" id="inputEmailEdit" formControlName="Editemail">
             <div class="validation-msg" style="color:red" *ngIf="email.touched && email.errors">
               <ul style="list-style-type:none">
                 <li class="text-danger" *ngIf="Editemail.errors?.pattern">
