--- a/App/ClientApp/src/app/shared/modules/sidebar/sidebar.component.html
+++ b/App/ClientApp/src/app/shared/modules/sidebar/sidebar.component.html
@@ -143,7 +143,7 @@
       <li [ngClass]="(URL=='/themeConfiguration')?'side-bar-li active-li':'side-bar-li'" *ngIf="!IsMainMenu && isTenantAdminUser" (click)="navigateTothemeConfiguration()">
         <a> <span class='nav-icon fa fa-gear' title="Theme ConfigurationComponent"> </span> <span class='nav-title'>Theme Configuration</span> </a>
       </li>
-      <li [ngClass]="(URL=='/tenantuser')?'side-bar-li active-li':'side-bar-li'" *ngIf="!IsMainMenu && isInstantTenantManager" (click)="navigateToTenantUsers()">
+      <li [ngClass]="(URL=='/tenantusers')?'side-bar-li active-li':'side-bar-li'" *ngIf="!IsMainMenu && isInstantTenantManager" (click)="navigateToTenantUsers()">
         <a> <span class='nav-icon icon-users-line2' title="Users"> </span> <span class='nav-title'>Users</span> </a>
       </li>
       <li [ngClass]="(URL=='/statemenetsearch')?'side-bar-li active-li':'side-bar-li'" (click)="navigateToStatemenetSearch()"
